users/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: users-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: users
  replicas: 4 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: users
    spec:
      containers:
      - name: users
        image: anthonynguyenthanh/users:v1
        ports:
        - containerPort: 8080
