users/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: users
  namespace: default
  labels:
    name: users
spec:
  containers:
    - image: sjsualeinbartolome/users:v1
      name: users
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
